# klaus

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/: config.example.toml
src/local_agent/: __main__.py  agent.py  cli.py  config.py  ollama_client.py  session.py
src/local_agent/safety/: confirm.py  patterns.py
src/local_agent/tools/: builtin.py  mcp_bridge.py  registry.py
tests/: test_agent_loop.py  test_builtin_tools.py  test_cli.py  test_config.py  test_diff_confirm.py  test_mcp_bridge.py  test_ollama_client.py  test_session.py  test_shell_safety.py  test_tool_registry.py
