[project]
name = "local-agent"
version = "0.1.0"
description = "Local-first CLI coding agent — Ollama + MCP"
authors = [
    { name = "Jeff Aigner", email = "jeff.aigner@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.4",
    "rich>=13",
    "typer>=0.12",
    "pydantic>=2",
    "mcp>=1.0",
]

[project.scripts]
local-agent = "local_agent.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "local-agent-shell-mcp",
]

[tool.uv.workspace]
members = ["packages/shell-mcp"]

[tool.uv.sources]
local-agent-shell-mcp = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"
